--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,7 @@
   publish = "dist"
 
 [build.environment]
+  NODE_VERSION = "18"
   VITE_FIREBASE_API_KEY = "$VITE_FIREBASE_API_KEY"
   VITE_FIREBASE_AUTH_DOMAIN = "$VITE_FIREBASE_AUTH_DOMAIN"
   VITE_FIREBASE_PROJECT_ID = "$VITE_FIREBASE_PROJECT_ID"
